--- a/.gitignore
+++ b/.gitignore
@@ -17,13 +17,13 @@
 *.pch
 
 # Libraries
-*.lib
+# *.lib
 *.a
 *.la
 *.lo
 
 # Shared objects (inc. Windows DLLs)
-*.dll
+# *.dll
 *.so
 *.so.*
 *.dylib
@@ -50,3 +50,11 @@ modules.order
 Module.symvers
 Mkfile.old
 dkms.conf
+
+# Project specific VS and output folders
+Processing_Sample/.vs/
+Processing_Sample/CProcessing/x64/
+Processing_Sample/x64/
+Processing_Sample/CProcessing/Win32/
+Processing_Sample/Win32/
+Processing_Sample/CProcessing/lib/
