--- a/.gitignore
+++ b/.gitignore
@@ -58,3 +58,6 @@ Processing_Sample/x64/
 Processing_Sample/CProcessing/Win32/
 Processing_Sample/Win32/
 Processing_Sample/CProcessing/lib/
+Processing_Empty/.vs/
+Processing_Empty/Win32/
+Processing_Empty/x64/
