[LICENSE] - Updated License file and headers to reflect the changes

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,4 @@ Processing_Sample/CProcessing/lib/
 Processing_Empty/.vs/
 Processing_Empty/Win32/
 Processing_Empty/x64/
+Processing_Sample/CProcessingPackage/
