Got draw points probably implemented.
Haven't checked yet. Need to test first then I can pull request these changes. :pog:

--- a/Processing_Sample/CProcessing/CProcessing.vcxproj
+++ b/Processing_Sample/CProcessing/CProcessing.vcxproj
@@ -247,6 +247,7 @@ xcopy "$(ProjectDir)FMOD\lib\x64\fmod.dll" "$(ProjectDir)lib\x64\*" /s /r /y /q 
     <ClCompile Include="Source\vect.c" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="cpp.hint" />
     <None Include="nanovg\src\nanovg.h.gch" />
     <None Include="nanovg\src\nanovg_gl.h.gch" />
     <None Include="nanovg\src\nanovg_gl_utils.h.gch" />
