--- a/Processing_Sample/CProcessing/CProcessing.vcxproj.filters
+++ b/Processing_Sample/CProcessing/CProcessing.vcxproj.filters
@@ -157,5 +157,6 @@
     <None Include="nanovg\src\stb_truetype.h.gch">
       <Filter>NanoVG</Filter>
     </None>
+    <None Include="cpp.hint" />
   </ItemGroup>
 </Project>
