Tested how to get screenshot working correctly, requires funny stuff but it works pretty well now without giant copying of images.
Getting things set up for change "images" in CP_Image.c to to vect_CP_Image so that it's interface is united.

--- a/Processing_Sample/Processing_Sample.vcxproj
+++ b/Processing_Sample/Processing_Sample.vcxproj
@@ -195,6 +195,7 @@ xcopy "$(ProjectDir)Assets\*" "$(OutDir)Assets\" /s /r /y /q</Command>
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.c" />
+    <ClCompile Include="main1.c" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
