--- a/Processing_Sample/Processing_Sample.vcxproj.filters
+++ b/Processing_Sample/Processing_Sample.vcxproj.filters
@@ -21,5 +21,8 @@
     <ClCompile Include="main.c">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="main1.c">
+      <Filter>Test GameStates</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
