--- a/Processing_Sample/Processing_Sample.vcxproj
+++ b/Processing_Sample/Processing_Sample.vcxproj
@@ -196,6 +196,14 @@ xcopy "$(ProjectDir)Assets\*" "$(OutDir)Assets\" /s /r /y /q</Command>
   <ItemGroup>
     <ClCompile Include="main.c" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="AudioEngine\Basic Audio Engine.vcxproj">
+      <Project>{280ada70-cb24-4bf5-89db-b1707e40e4be}</Project>
+    </ProjectReference>
+    <ProjectReference Include="CProcessing\CProcessing.vcxproj">
+      <Project>{096f3a60-23a6-4a26-a2e9-158f167627f8}</Project>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
