BuildReleasePackage.bat - new script to create the release package * build all targets and platforms * copy output inc and lib folders to the Empty project * create zip folder and place in Releases

--- a/.gitignore
+++ b/.gitignore
@@ -63,4 +63,8 @@ Processing_Empty/Win32/
 Processing_Empty/x64/
 Processing_Sample/CProcessingPackage/
 
+# User files
 *.user
+
+# Release script intermediate files
+CProcessingOutput/
