--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ Processing_Sample/CProcessingPackage/
 
 # Release script intermediate files
 CProcessingOutput/
+Processing_Sample/Processi.14B654ED/
