--- a/.gitignore
+++ b/.gitignore
@@ -69,3 +69,4 @@ Processing_Sample/CProcessingPackage/
 # Release script intermediate files
 CProcessingOutput/
 Processing_Sample/Processi.14B654ED/
+Processing_Empty/Processi.14B654ED/
