Demo Reorganization Demo Manager - navigates a few key demos Demos - GridWave, DancingLines, GamepadVisualization, PerlinNoise

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,4 @@ Processing_Sample/CProcessingPackage/
 CProcessingOutput/
 Processing_Sample/Processi.14B654ED/
 Processing_Empty/Processi.14B654ED/
+Processing_Sample/Intermediate/
